Minor CSS regression fix: menu mouseover highlights now have spacing again

--- a/src/themes/default/dropdown/index.css
+++ b/src/themes/default/dropdown/index.css
@@ -34,6 +34,7 @@
   font-size: var(--font-tiny);
   font-weight: 400;
   padding: 2px 10px;
+  margin: 0 5px;
   outline: none;
   user-select: none;
 }
